<resources>

    <!--App Name-->
    <string name="app_name">Chaty</string>

    <!--Login Activity-->
    <string name="login_activity_welcome">Welcome to Chaty</string>
    <string name="login_activity_title">Where you can connect with people quickly</string>
    <string name="login_activity_login">Log In</string>
    <string name="login_activity_sign_up">Sign Up</string>


    <!--LoginPhone Fragment-->
    <string name="login_fragment_sign_in">Sign In</string>
    <string name="login_fragment_phone">Phone</string>
    <string name="login_fragment_password">Password</string>
    <string name="login_fragment_login">Login</string>
    <string name="login_fragment_or">OR</string>


    <!--Register Fragment-->
    <string name="register_fragment_create">Create new account</string>
    <string name="register_fragment_full_name">Full Name</string>
    <string name="register_fragment_email">Email</string>
    <string name="register_fragment_phone_number">Phone Number</string>
    <string name="register_fragment_password">Password</string>
    <string name="register_fragment_sign_up">Sign Up</string>

    <!--Message Fragment-->
    <string name="message_fragment_title">Chat</string>

    <!--Contract Fragment-->
    <string name="contract_fragment_title">Contract</string>

    <!--Profile Fragment-->
    <string name="profile_fragment_title">Profile</string>

    <!--Menu Tab-->
    <string name="menu_message">Message</string>
    <string name="menu_contract">Contract</string>
    <string name="menu_profile">Profile</string>
    <string name="progress_is_loading">Loading…</string>


</resources>