<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/white"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClose"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/btnClose_1"
                android:layout_toEndOf="@id/btnClose"
                android:fontFamily="@font/sftext_bold"
                android:gravity="center"
                android:text="@string/login_fragment_sign_in"
                android:textColor="@color/main"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClose_1"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back"
                android:visibility="invisible" />
        </RelativeLayout>


        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_border_edittext"
            android:hint="@string/register_fragment_phone_number"
            android:nextFocusDown="@id/edt_password"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_border_edittext"
            android:hint="@string/register_fragment_password"
            android:nextFocusDown="@id/btn_login"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/login_fragment_login" />
    </RelativeLayout>
</layout>
